--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
-<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
   <groupId>java.project.RandomNumberGenerator</groupId>
   <artifactId>RandomNumberGenerator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>RandomNumberGenerator</name>
-  
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
     </parent>
 
+
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         
 <!-- https://mvnrepository.com/artifact/com.google.cloud.tools/appengine-maven-plugin -->
-    <dependency>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>2.1.0</version>
-    </dependency>
+	<dependency>
+	    <groupId>com.google.cloud.tools</groupId>
+	    <artifactId>appengine-maven-plugin</artifactId>
+	    <version>2.1.0</version>
+	</dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         
     </dependencies>
 
@@ -41,10 +57,10 @@
             </plugin>
             
             <plugin>
-             <groupId>com.google.appengine</groupId>
-             <artifactId>appengine-maven-plugin</artifactId>
-             <version>1.9.76</version>
-          </plugin>
+			   <groupId>com.google.appengine</groupId>
+			   <artifactId>appengine-maven-plugin</artifactId>
+			   <version>1.9.76</version>
+			</plugin>
             
         </plugins>
     </build>
